--- a/myblog.html
+++ b/myblog.html
@@ -23,7 +23,7 @@
 	
   <nav>
     <ul> <li><a href="about.html">About</a></li>
-		   <li><a href="blog.html">Blog</a></li>
+		   <li><a href="myblog.html">Blog</a></li>
 		   <li><a href="gallery.html">Gallery</a></li>
 		   <li><a href="contact.html">Contact</a></li>
       </ul>
